--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,11 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "google/recaptcha": "^1.2",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/slack-notification-channel": "^2.1",
+        "laravel/tinker": "^2.0",
+        "mcamara/laravel-localization": "^1.5"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
